--- a/style.css
+++ b/style.css
@@ -1,3 +1,19 @@
-body {
+body
+{
     align-items: center;
+    align-content: center;
+    align-self: center;
 }
+
+div { 
+    margin: auto;
+    display: block;
+    align-items: center;
+    align-content: center;
+    align-self: center;
+    width: 200px; 
+    height: 200px; 
+    border: black 2px solid;
+    position: relative;
+  }
+
